added notes in the app.css

--- a/src/App.css
+++ b/src/App.css
@@ -194,3 +194,5 @@ body {
     margin-right: auto;
     width: 50%;
   } */
+
+  /* Look into the 'AboutMe'- the text (make it bold, make the image smaller)- refer to Tutorial Videos */
