--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,15 @@ nav {
   text-align: center;
 
 }
+
+.fixed{
+position: fixed;
+left: 0;
+right: 0;
+z-index: 100;
+background-color: #0D1317;
+}
+
 /* CSS for Menu Button */
 /* .dropdown {
 	display: none;
@@ -115,7 +124,7 @@ body {
 /* CSS for the contact page */
 #Contact-Me{
   margin-top: 50vh;
-  height: 50vh;
+  height: calc(100vh - 3rem);
   width: 100vw;
   background-color: #0D1317;
   color: #f2e2d2;
@@ -144,6 +153,7 @@ body {
   font-size: 30px;
   font-weight: bolder;
   margin-top: 3vh;
+  padding-top: 2rem;
 }
 
 .card-text {
