updated background color and text for 'about me' page, updated resume

--- a/src/App.css
+++ b/src/App.css
@@ -93,8 +93,8 @@ body {
   /*needed to add a 'vw' because we wanted the width, so that it will match the height 'vh' */
   /* position:absolute; /*needed to make the position absolute so that we could move it all the way to the left
     left:0; this means it HAS to start at the start of the left-side browser, starting at pixel zero */
-  background-color: #f2e2d2;
-  color: #0D1317;
+  background-color: #0D1317;
+  color: #f2e2d2;
   box-sizing: border-box;
   text-align: center;
   padding-top: 10px;
